--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,8 @@
 <div class="header">
+  <ul class="nav nav-pills pull-right">
+    <li class="active"><a ng-href="#">Home</a></li>
+    <li><a ng-href="#/about">About</a></li>
+  </ul>
   <h3 class="text-muted">Protractor Tutorial</h3>
 </div>
 
